docs/apache-airflow-providers-google/8.2.0/_sources/_api/airflow/providers/google/cloud/links/dataflow/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataflow`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataflow

.. autoapi-nested-parse::

   This module contains Google Dataflow links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataflow.DataflowJobLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataflow.DATAFLOW_BASE_LINK
   airflow.providers.google.cloud.links.dataflow.DATAFLOW_JOB_LINK


.. py:data:: DATAFLOW_BASE_LINK
   :annotation: = https://pantheon.corp.google.com/dataflow/jobs

   

.. py:data:: DATAFLOW_JOB_LINK
   

   

.. py:class:: DataflowJobLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow Job Link

   .. py:attribute:: name
      :annotation: = Dataflow Job

      

   .. py:attribute:: key
      :annotation: = dataflow_job_config

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id, region, job_id)
      :staticmethod:



