docs/apache-airflow-providers-google/10.21.0/_sources/_api/airflow/providers/google/cloud/links/dataflow/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataflow`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataflow

.. autoapi-nested-parse::

   This module contains Google Dataflow links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataflow.DataflowJobLink
   airflow.providers.google.cloud.links.dataflow.DataflowPipelineLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataflow.DATAFLOW_BASE_LINK
   airflow.providers.google.cloud.links.dataflow.DATAFLOW_JOB_LINK
   airflow.providers.google.cloud.links.dataflow.DATAFLOW_PIPELINE_BASE_LINK
   airflow.providers.google.cloud.links.dataflow.DATAFLOW_PIPELINE_LINK


.. py:data:: DATAFLOW_BASE_LINK
   :value: '/dataflow/jobs'

   

.. py:data:: DATAFLOW_JOB_LINK

   

.. py:data:: DATAFLOW_PIPELINE_BASE_LINK
   :value: '/dataflow/pipelines'

   

.. py:data:: DATAFLOW_PIPELINE_LINK

   

.. py:class:: DataflowJobLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow Job Link.

   .. py:attribute:: name
      :value: 'Dataflow Job'

      

   .. py:attribute:: key
      :value: 'dataflow_job_config'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(operator_instance, context, project_id, region, job_id)
      :staticmethod:



.. py:class:: DataflowPipelineLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow Pipeline Link.

   .. py:attribute:: name
      :value: 'Dataflow Pipeline'

      

   .. py:attribute:: key
      :value: 'dataflow_pipeline_config'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(operator_instance, context, project_id, location, pipeline_name)
      :staticmethod:



